--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
         <div class="carousel-item active">
           <img src="dad1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label Gunesh</h5>
+            <h5>First slide label Tural</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="dad2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label Murad</h5>
+            <h5>Second slide label tural</h5>
             <p>Some representative placeholder content for the second slide.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="dad3.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label Ali</h5>
+            <h5>Third slide label Tural</h5>
             <p>Some representative placeholder content for the third slide.</p>
           </div>
         </div>
